--- a/client/src/app/home/leaderboards/leaderboards.component.html
+++ b/client/src/app/home/leaderboards/leaderboards.component.html
@@ -7,7 +7,7 @@
     <th scope="col">#</th>
     <th scope="col">Username</th>
     <th scope="col">GamesPlayed</th>
-    <th scope="col">TotalScores</th>
+    <th scope="col">TotalScب ores</th>
     <th scope="col">Average Score</th>
   </tr>
   </thead>
