- leaderboard fix - quiz typo fix

--- a/client/src/app/home/quizzes-list/quizzes-list.component.html
+++ b/client/src/app/home/quizzes-list/quizzes-list.component.html
@@ -2,6 +2,7 @@
   @for (quiz of quizzes; track quiz._id; let i = $index) {
     <li class="list-group-item d-flex align-items-center">
       <div>
+        {{ quiz.title }}
         <div class="pe-4 text-muted">{{ quiz.description }}</div>
       </div>
       <button class="ms-auto btn btn-primary" [routerLink]="[quiz._id]">Play game</button>
