--- a/client/src/app/admin/quiz-create/create/create-edit.component.html
+++ b/client/src/app/admin/quiz-create/create/create-edit.component.html
@@ -3,7 +3,7 @@
 
   <h2 class="d-flex align-items-center gap-1">
     <button class="btn btn-sm btn-primary" routerLink="../">Back</button>
-    Create Quiz:
+    {{ route.snapshot.params['id'] ? 'Edit' : 'Create' }} Quiz:
   </h2>
   <div class="mb-3">
     <input formControlName="title" type="email" class="form-control" placeholder="Quiz title">
@@ -48,7 +48,7 @@
       </div>
     }
     <div class="d-flex justify-content-end mt-2">
-      <button class="btn btn-primary" [disabled]="fgQuiz.invalid" (click)="createQuiz()">Submit Quiz</button>
+      <button class="btn btn-primary" [disabled]="fgQuiz.invalid" (click)="createQuiz()">{{route.snapshot.params['id'] ? 'Update' : 'Create'}} Quiz</button>
     </div>
   </div>
 
