--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -1,14 +1,15 @@
 <form #form='ngForm' class="form-signin text-center mt-5">
-  <img class="mb-4" src="/assets/game-icon.svg" alt="" width="72" height="72">
+  <img class="mb-4" src="/assets/quiz.png" alt="" width="72" height="72">
   <h1 class="h3 mb-3 font-weight-normal">Please Register</h1>
   <div class="text-start">
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" [(ngModel)]="username" name="username" id="inputEmail" class="form-control" required="" autofocus="">
+    <input #email='ngModel' type="email" [(ngModel)]="username" name="username" [required]="true" [email]="true" id="inputEmail" class="form-control" autofocus="">
+    <label [class.invisible]="!(email.touched && email.invalid)" class="small d-block block text-danger">Invalid email</label>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" [(ngModel)]="password" name="password" id="inputPassword" class="form-control" required="">
+    <input type="password" [required]="true" [(ngModel)]="password" name="password" id="inputPassword" class="form-control" required="">
     <div class="checkbox mb-3 d-flex justify-content-between">
       <button class="ms-auto btn btn-link btn-sm" style="cursor: pointer" routerLink="../login">Already a user?</button>
     </div>
   </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit" (click)="onSignIn()">Register</button>
+  <button [disabled]="form.invalid" class="btn btn-lg btn-primary btn-block" type="submit" (click)="onSignIn()">Register</button>
 </form>
