- email validation updated

--- a/client/src/app/auth/register/register.component.html
+++ b/client/src/app/auth/register/register.component.html
@@ -3,7 +3,9 @@
   <h1 class="h3 mb-3 font-weight-normal">Please Register</h1>
   <div class="text-start">
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input #email='ngModel' type="email" [(ngModel)]="username" name="username" [required]="true" [email]="true" id="inputEmail" class="form-control" autofocus="">
+    <input #email='ngModel' type="email" [(ngModel)]="username"
+           pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{1,}$"
+           name="username" [required]="true" [email]="true" id="inputEmail" class="form-control" autofocus="">
     <label [class.invisible]="!(email.touched && email.invalid)" class="small d-block block text-danger">Invalid email</label>
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" [required]="true" [(ngModel)]="password" name="password" id="inputPassword" class="form-control" required="">
